--- a/community-modules/core/src/styles/ag-theme-material/sass/_ag-theme-material-mixin.scss
+++ b/community-modules/core/src/styles/ag-theme-material/sass/_ag-theme-material-mixin.scss
@@ -58,9 +58,6 @@
 
     .ag-set-filter-select-all {
         border-bottom: solid 1px ag-param(border-color);
-        height: auto;
-        padding-top: ag-param(grid-size) * 2;
-        padding-bottom: ag-param(grid-size) * 2;
     }
 
     .ag-column-drop-vertical-empty-message {
